--- a/style.css
+++ b/style.css
@@ -74,8 +74,7 @@
 }
 /*songs card styling ends*/
 .play:hover {
-  background-color: black;
-  color: white;
+  background-color: greenyellow;
 }
 
 ::-webkit-scrollbar {
